--- a/frontend/sass/_merchants.sass
+++ b/frontend/sass/_merchants.sass
@@ -4,7 +4,8 @@
   position: fixed
   color: #444
   top: 32px
-  padding: 20px 10px 20px 15px
+  left: 630px
+  padding: 25px 10px 20px 15px
   border: 1px solid #ccc
   border-width: 1px 1px 1px 0
   +border-right-radius(5px)
@@ -12,12 +13,13 @@
   width: 318px
   min-height: 500px
   .close
-    display: none
     float: right
-    .ui-button-text
-      font-size: 11px
+    position: absolute
+    top: 4px
+    right: 10px
+    font-size: 10px
   .name-and-location
-    height: 58px
+    height: 60px
     .avatar
       float: right
       padding: 3px
@@ -55,8 +57,8 @@
           width: 220px
       .icon-and-vote
         float: right
-        width: 32px
-        margin: 5px 5px 10px 10px
+        width: 22px
+        margin: 5px 0 10px 10px
         .view-profile
         .vote
           display: block
