--- a/frontend/sass/_base.sass
+++ b/frontend/sass/_base.sass
@@ -54,10 +54,10 @@ textarea
     display: block
     z-index: 1
     background: #F6FAFD
-    margin: 15px 0 0 590px
+    margin: 15px 0 0 592px
     +border-right-radius(8px)
     height: 100%
     min-height: 1000px
-    position: relative
+    position: fixed
     &.selected
       background: $timeline_row_selected_color
