--- a/public/javascripts/compiled/views/merchants/sidebar.handlebars
+++ b/public/javascripts/compiled/views/merchants/sidebar.handlebars
@@ -6,7 +6,7 @@
   <img src="{{ . }}" class="avatar" />
   {{/avatar}}
   {{^avatar}}
-  <img src="/images/avatar.gif" class="avatar" />
+  <img src="/images/avatar.png" class="avatar" />
   {{/avatar}}
   <h3>{{ name }}</h3>
   <p class="address">{{{../formatted_address}}}</p>
