Began refactor to support multiple event types

--- a/frontend/sass/_timeline.sass
+++ b/frontend/sass/_timeline.sass
@@ -120,7 +120,7 @@ table#timeline
         td, th
           border-top-color: $timeline_row_selected_border_color
           background: $timeline_row_selected_color
-      &.reward
+      &.reward, &.deposit
         td, th
           color: #090
     tr.selected + tr
