Began work on detail views

--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -10,7 +10,7 @@
 
 = content_for :sidebar do
   #overview
-  #merchant-view{:style => "display: none;"}
+  #event-detail-view{:style => "display: none;"}
 
 = content_for :javascript do
 
