--- a/frontend/sass/_merchants.sass
+++ b/frontend/sass/_merchants.sass
@@ -49,7 +49,7 @@
     +speech-bubble(16px)
     .twitter, .facebook
       clear: both
-      padding: 0 0 10px
+      padding: 0 0 0px
       min-height: 50px
       .form
         +small-button
@@ -80,6 +80,7 @@
           +no-bullets
           +reset-box-model
     p.security
+      display: none
       border-top: 1px solid #e3e3e3
       font-size: 10px
       margin: 0
