--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -1770,7 +1770,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 /* line 50, ../../../frontend/sass/_merchants.sass */
 #merchant-view .social .twitter, #merchant-view .social .facebook {
   clear: both;
-  padding: 0 0 10px;
+  padding: 0 0 0px;
   min-height: 50px;
 }
 /* line 32, ../../../frontend/sass/_ui_mixins.sass */
@@ -1833,21 +1833,22 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 }
 /* line 82, ../../../frontend/sass/_merchants.sass */
 #merchant-view .social p.security {
+  display: none;
   border-top: 1px solid #e3e3e3;
   font-size: 10px;
   margin: 0;
   background: url(/images/icons/lock.png) no-repeat left 15px;
   padding: 10px 0 0 25px;
 }
-/* line 88, ../../../frontend/sass/_merchants.sass */
+/* line 89, ../../../frontend/sass/_merchants.sass */
 #merchant-view .feedback {
   padding: 15px 0 0;
 }
-/* line 90, ../../../frontend/sass/_merchants.sass */
+/* line 91, ../../../frontend/sass/_merchants.sass */
 #merchant-view .feedback p {
   margin: 0.5em 0.2em;
 }
-/* line 94, ../../../frontend/sass/_merchants.sass */
+/* line 95, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .branding {
   position: absolute;
   bottom: -17px;
@@ -1856,45 +1857,45 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   color: #333333;
   line-height: 15px;
 }
-/* line 101, ../../../frontend/sass/_merchants.sass */
+/* line 102, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .branding img {
   display: inline-block;
   position: relative;
   top: 5px;
 }
-/* line 105, ../../../frontend/sass/_merchants.sass */
+/* line 106, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search h4 {
   font-size: 13px;
   line-height: 1.4em;
   margin: 0 0 0.35em;
 }
-/* line 109, ../../../frontend/sass/_merchants.sass */
+/* line 110, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search h4 em {
   font-weight: bold;
   font-style: normal;
 }
-/* line 112, ../../../frontend/sass/_merchants.sass */
+/* line 113, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-form {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 114, ../../../frontend/sass/_merchants.sass */
+/* line 115, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-form .ui-button {
   float: left;
   margin: 0 !important;
 }
-/* line 117, ../../../frontend/sass/_merchants.sass */
+/* line 118, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-form .ui-button .ui-button-text {
   padding-top: 6px;
   padding-bottom: 6px;
 }
-/* line 120, ../../../frontend/sass/_merchants.sass */
+/* line 121, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-form .search-field {
   float: left;
   width: 195px;
   margin: 0 5px 0 0;
 }
-/* line 125, ../../../frontend/sass/_merchants.sass */
+/* line 126, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-results {
   margin: 5px 0 0 0;
   border: 1px solid #dddddd;
@@ -1902,7 +1903,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   max-height: 250px;
   overflow: auto;
 }
-/* line 131, ../../../frontend/sass/_merchants.sass */
+/* line 132, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-results ul {
   list-style: none;
   margin: 0;
@@ -1973,24 +1974,24 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #merchant-view .merchant-search .merchant-search-results ul li.result ul.buttons .ui-button .ui-button-text {
   font-size: 10px;
 }
-/* line 133, ../../../frontend/sass/_merchants.sass */
+/* line 134, ../../../frontend/sass/_merchants.sass */
 #merchant-view .merchant-search .merchant-search-results ul p {
   font-size: 11px;
   color: #333333;
   margin: 0.2em 0;
 }
 
-/* line 139, ../../../frontend/sass/_merchants.sass */
+/* line 140, ../../../frontend/sass/_merchants.sass */
 #feedback h3, #sales-chart h3 {
   margin: 0 0 0.5em;
   font-size: 14px;
 }
 
-/* line 143, ../../../frontend/sass/_merchants.sass */
+/* line 144, ../../../frontend/sass/_merchants.sass */
 #feedback {
   padding: 10px 0 0 0;
 }
-/* line 145, ../../../frontend/sass/_merchants.sass */
+/* line 146, ../../../frontend/sass/_merchants.sass */
 #feedback #feedback-list {
   list-style: none;
   margin: 0;
@@ -2063,7 +2064,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #feedback #feedback-list li.feedback ul.buttons .ui-button .ui-button-text {
   font-size: 10px;
 }
-/* line 150, ../../../frontend/sass/_merchants.sass */
+/* line 151, ../../../frontend/sass/_merchants.sass */
 #feedback #feedback-list li p.comment {
   margin: 0 0 0.2em;
 }
@@ -2187,18 +2188,52 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
   font-size: 10px;
 }
 
-/* line 21, ../../../frontend/sass/screen.sass */
+/* line 3, ../../../frontend/sass/events/_detail.sass */
+#event-detail-view {
+  position: fixed;
+  color: #444444;
+  top: 32px;
+  left: 630px;
+  padding: 25px 10px 20px 15px;
+  border: 1px solid #cccccc;
+  border-width: 1px 1px 1px 0;
+  -moz-border-radius-topright: 5px;
+  -webkit-border-top-right-radius: 5px;
+  -o-border-top-right-radius: 5px;
+  -ms-border-top-right-radius: 5px;
+  -khtml-border-top-right-radius: 5px;
+  border-top-right-radius: 5px;
+  -moz-border-radius-bottomright: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  -o-border-bottom-right-radius: 5px;
+  -ms-border-bottom-right-radius: 5px;
+  -khtml-border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background: #f6f6f6;
+  width: 318px;
+  min-height: 500px;
+}
+/* line 15, ../../../frontend/sass/events/_detail.sass */
+#event-detail-view .close {
+  float: right;
+  position: absolute;
+  top: 4px;
+  right: 10px;
+  font-size: 10px;
+}
+
+/* line 23, ../../../frontend/sass/screen.sass */
 #container {
   position: relative;
 }
 
-/* line 24, ../../../frontend/sass/screen.sass */
+/* line 26, ../../../frontend/sass/screen.sass */
 #global {
   position: absolute;
   top: 2px;
   right: 15px;
 }
-/* line 28, ../../../frontend/sass/screen.sass */
+/* line 30, ../../../frontend/sass/screen.sass */
 #global ul {
   margin: 0;
   padding: 0;
@@ -2226,7 +2261,7 @@ table#timeline tbody tr.selected + tr td, table#timeline tbody tr.selected + tr 
 #global ul li:last-child, #global ul li.last {
   padding-right: 0;
 }
-/* line 30, ../../../frontend/sass/screen.sass */
+/* line 32, ../../../frontend/sass/screen.sass */
 #global ul a {
   text-decoration: none;
   color: white;
