Hide comment form after submitting a comment

--- a/frontend/sass/_feedback.sass
+++ b/frontend/sass/_feedback.sass
@@ -45,3 +45,9 @@
         margin: 0 0 0 10px
       p
         display: none
+  p.thanks
+    clear: both
+    text-align: center
+    padding: 1em 0
+    color: #090
+    font-weight: bold
